added nav active class and footer links, changed quote, created pages folder, fixed contact links, created success.html and js

--- a/pages/about.html
+++ b/pages/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About me</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../styles.css" />
   </head>
   <body>
     <nav>
@@ -12,16 +12,18 @@
         <h2>Mia Kalaj</h2>
       </div>
       <div>
-        <a href="index.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="">About</a>
-        <a href="portfolio.html">Portfolio</a>
+        <a href="./portfolio.html">Portfolio</a>
+        <!-- added contact -->
+        <a href="./contact.html">Contact</a>
       </div>
     </nav>
     <main>
       <h2>When I'm not writing codes, I like to do the following things</h2>
       <section>
         <h3>Cooking</h3>
-        <img src="./images/cooking.jpeg" alt="cooking picture" />
+        <img src="../images/cooking.jpeg" alt="cooking picture" />
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis fuga
           quae voluptatem est sint deleniti velit rerum incidunt aliquam
@@ -37,7 +39,7 @@
       </section>
       <section>
         <h3>Traveling</h3>
-        <img src="./images/travel.jpeg" alt="travel picture" />
+        <img src="../images/travel.jpeg" alt="travel picture" />
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis nobis
           explicabo quibusdam, ut atque ullam perspiciatis, eius quaerat quasi
@@ -52,7 +54,12 @@
         </p>
       </section>
     </main>
-    <footer>Facebook Twitter</footer>
-    <script src="script.js"></script>
+    <footer>
+      <ul>
+        <li><a href="https://www.facebook.com">Facebook</a></li>
+        <li><a href="https://www.twitter.com">Twitter</a></li>
+        <li><a href="https://www.linkedin.com">LinkedIn</a></li>
+      </ul>
+    </footer>
   </body>
 </html>
