--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal Website</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <nav>
@@ -12,9 +12,11 @@
         <h2>Mia Kalaj</h2>
       </div>
       <div>
-        <a href="">Home</a>
-        <a href="about.html">About</a>
-        <a href="portfolio.html">Portfolio</a>
+        <!-- added active styling -->
+        <a class="active" href="index.html">Home</a>
+        <a href="./pages/about.html">About</a>
+        <a href="./pages/portfolio.html">Portfolio</a>
+        <a href="./pages/contact.html">Contact</a>
       </div>
     </nav>
     <main>
@@ -31,7 +33,14 @@
         Martin Luther King Jr
       </h3>
     </main>
-    <footer>Facebook Twitter</footer>
+    <footer>
+      <!-- added list with links -->
+      <ul>
+        <li><a href="https://www.facebook.com">Facebook</a></li>
+        <li><a href="https://www.twitter.com">Twitter</a></li>
+        <li><a href="https://www.linkedin.com">LinkedIn</a></li>
+      </ul>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
