--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
         expedita, officia officiis aperiam. Quae, a quibusdam dolores quas,
         velit, rem est nulla deleniti repudiandae et eius laudantium alias.
       </p>
-
+      <!-- changed quote -->
       <h3 class="quote">
-        "You don't have to see the whole staircase, just take the first step." -
-        Martin Luther King Jr
+        “Victory is sweetest when you’ve known defeat.” – Malcolm S. Forbes
       </h3>
     </main>
     <footer>
