added icons with links in footer, changed index.html layout to have quote below text and image

--- a/index.html
+++ b/index.html
@@ -20,25 +20,44 @@
       </div>
     </nav>
     <main>
-      <img src="./images/avatar.jpeg" alt="picture" />
-      <h1>Web developer</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe illo nisi
-        expedita, officia officiis aperiam. Quae, a quibusdam dolores quas,
-        velit, rem est nulla deleniti repudiandae et eius laudantium alias.
-      </p>
+      <div class="flex-container">
+        <div>
+          <h1>Web developer</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe illo
+            nisi expedita, officia officiis aperiam. Quae, a quibusdam dolores
+            quas, velit, rem est nulla deleniti repudiandae et eius laudantium
+            alias.
+          </p>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam
+            incidunt, recusandae, praesentium sint soluta id error optio autem
+            obcaecati perferendis repellendus aliquam ex aspernatur et magni rem
+            ipsam, placeat repellat!
+          </p>
+        </div>
+        <img id="personalPic" src="./images/avatar.jpeg" alt="picture" />
+      </div>
       <!-- changed quote -->
-      <h3 class="quote">
-        “Victory is sweetest when you’ve known defeat.” – Malcolm S. Forbes
-      </h3>
+      <div>
+        <h3 class="quote">
+          “Victory is sweetest when you’ve known defeat.”
+          <br />
+          – Malcolm S. Forbes
+        </h3>
+      </div>
     </main>
     <footer>
-      <!-- added list with links -->
-      <ul>
-        <li><a href="https://www.facebook.com">Facebook</a></li>
-        <li><a href="https://www.twitter.com">Twitter</a></li>
-        <li><a href="https://www.linkedin.com">LinkedIn</a></li>
-      </ul>
+      <!-- added facebook, twitter, linkedin icons with links -->
+      <a href="https://www.facebook.com"
+        ><img class="img-footer" src="./images/facebook.png" alt="" />
+      </a>
+      <a href="https://www.twitter.com"
+        ><img class="img-footer" src="./images/twitter.png" alt=""
+      /></a>
+      <a href="https://www.linkedin.com"
+        ><img class="img-footer" src="./images/linkedin.png" alt=""
+      /></a>
     </footer>
     <script src="script.js"></script>
   </body>
