--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -63,11 +63,15 @@
       </div>
     </main>
     <footer>
-      <ul>
-        <li><a href="https://www.facebook.com">Facebook</a></li>
-        <li><a href="https://www.twitter.com">Twitter</a></li>
-        <li><a href="https://www.linkedin.com">LinkedIn</a></li>
-      </ul>
+      <a href="https://www.facebook.com"
+        ><img class="img-footer" src="./images/facebook.png" alt="" />
+      </a>
+      <a href="https://www.twitter.com"
+        ><img class="img-footer" src="./images/twitter.png" alt=""
+      /></a>
+      <a href="https://www.linkedin.com"
+        ><img class="img-footer" src="./images/linkedin.png" alt=""
+      /></a>
     </footer>
   </body>
 </html>
