--- a/pages/about.html
+++ b/pages/about.html
@@ -15,7 +15,7 @@
         <a href="../index.html">Home</a>
         <a href="">About</a>
         <a href="./portfolio.html">Portfolio</a>
-        <!-- added contact -->
+
         <a href="./contact.html">Contact</a>
       </div>
     </nav>
@@ -55,11 +55,15 @@
       </section>
     </main>
     <footer>
-      <ul>
-        <li><a href="https://www.facebook.com">Facebook</a></li>
-        <li><a href="https://www.twitter.com">Twitter</a></li>
-        <li><a href="https://www.linkedin.com">LinkedIn</a></li>
-      </ul>
+      <a href="https://www.facebook.com"
+        ><img class="img-footer" src="./images/facebook.png" alt="" />
+      </a>
+      <a href="https://www.twitter.com"
+        ><img class="img-footer" src="./images/twitter.png" alt=""
+      /></a>
+      <a href="https://www.linkedin.com"
+        ><img class="img-footer" src="./images/linkedin.png" alt=""
+      /></a>
     </footer>
   </body>
 </html>
