added active classes and fixed icons in portfolio and  about.html

--- a/pages/about.html
+++ b/pages/about.html
@@ -13,7 +13,8 @@
       </div>
       <div>
         <a href="../index.html">Home</a>
-        <a href="">About</a>
+        <!-- added active class -->
+        <a class="active" href="about.html">About</a>
         <a href="./portfolio.html">Portfolio</a>
 
         <a href="./contact.html">Contact</a>
@@ -55,14 +56,15 @@
       </section>
     </main>
     <footer>
+      <!-- fixed icons -->
       <a href="https://www.facebook.com"
-        ><img class="img-footer" src="./images/facebook.png" alt="" />
+        ><img class="img-footer" src="../images/facebook.png" alt="" />
       </a>
       <a href="https://www.twitter.com"
-        ><img class="img-footer" src="./images/twitter.png" alt=""
+        ><img class="img-footer" src="../images/twitter.png" alt=""
       /></a>
       <a href="https://www.linkedin.com"
-        ><img class="img-footer" src="./images/linkedin.png" alt=""
+        ><img class="img-footer" src="../images/linkedin.png" alt=""
       /></a>
     </footer>
   </body>
