--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -12,11 +12,11 @@
         <h2>Mia Kalaj</h2>
       </div>
       <div>
-        <!-- fixed links after moving portfolio to pages folder -->
         <a href="../index.html">Home</a>
         <a href="./about.html">About</a>
-        <a href="">Portfolio</a>
-        <!-- added contact -->
+        <!-- added active class -->
+        <a class="active" href="portfolio.html">Portfolio</a>
+
         <a href="./contact.html">Contact</a>
       </div>
     </nav>
@@ -44,7 +44,6 @@
         <section class="project">
           <h3>The Second Project</h3>
           <div>
-            <!-- fixed image links after moving to pages folder -->
             <img src="../images/tulips.jpeg" alt="tulips" />
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
@@ -63,14 +62,15 @@
       </div>
     </main>
     <footer>
+      <!-- fixed icons -->
       <a href="https://www.facebook.com"
-        ><img class="img-footer" src="./images/facebook.png" alt="" />
+        ><img class="img-footer" src="../images/facebook.png" alt="" />
       </a>
       <a href="https://www.twitter.com"
-        ><img class="img-footer" src="./images/twitter.png" alt=""
+        ><img class="img-footer" src="../images/twitter.png" alt=""
       /></a>
       <a href="https://www.linkedin.com"
-        ><img class="img-footer" src="./images/linkedin.png" alt=""
+        ><img class="img-footer" src="../images/linkedin.png" alt=""
       /></a>
     </footer>
   </body>
