--- a/success.html
+++ b/success.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>success</title>
+    
   </head>
-  <body>
-    <h1>success!</h1>
+  <body style="background-color: aquamarine;">
+    <h1>successfully sent contact info!</h1>
     <script src="./success.js"></script>
 </html>
