added section tags in index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
         <h2>Mia Kalaj</h2>
       </div>
       <div>
-        <!-- added active styling -->
         <a class="active" href="index.html">Home</a>
         <a href="./pages/about.html">About</a>
         <a href="./pages/portfolio.html">Portfolio</a>
@@ -21,7 +20,8 @@
     </nav>
     <main>
       <div class="flex-container">
-        <div>
+        <!-- added section tag-->
+        <section>
           <h1>Web developer</h1>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe illo
@@ -35,17 +35,17 @@
             obcaecati perferendis repellendus aliquam ex aspernatur et magni rem
             ipsam, placeat repellat!
           </p>
-        </div>
+        </section>
         <img id="personalPic" src="./images/avatar.jpeg" alt="picture" />
       </div>
-      <!-- changed quote -->
-      <div>
+      <!-- added section tag-->
+      <section>
         <h3 class="quote">
           “Victory is sweetest when you’ve known defeat.”
           <br />
           – Malcolm S. Forbes
         </h3>
-      </div>
+      </section>
     </main>
     <footer>
       <!-- added facebook, twitter, linkedin icons with links -->
